# squawk-warden

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml.example
embedded/: Cargo.toml
embedded/.cargo/: config.toml.example
embedded/src/: lib.rs
frontend/: index.html  package-lock.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  custom.d.ts
frontend/src/components/: Card.tsx  NavBar.tsx
server/: Cargo.toml  Dockerfile  build_image.sh
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
